[package]
name = "lesk"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"
description = "A spiritual descendant of lex inspired by RE-flex."

[features]
default = ["DEBUG"]

DEBUG = []

[dependencies]
#relesk          = {path = "/Users/rjacobson/Development/Lesk/relesk"}
#ranges         = {path = "/Users/rjacobson/Development/ranges", features=["use_std"]}
ranges        = "0.3.0"
quanta        = "0.6.2" # Timing compilation, etc.
patricia_tree = "0.2.0" # String literal tries
defaultmap    = {path = "/Users/rjacobson/Development/defaultmap"}
appendlist    = "1.4.0" # Fast append-only list, no reallocations

#atomic-option = "0.1.2" # atomic, nullable, owned pointers
#lazy_static    = "1.4.0"
#macro-attr     = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#newtype_derive = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#strum          = "0.19"  # String <--> Enum conversions
#strum_macros   = "0.19"
#num_enum       = "0.5.1" # Primitive <--> Enum conversions

#[workspace]
#members = ["relesk"]
