[package]
name = "lesk"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"
description = "A spiritual descendant of lex inspired by RE-flex."

[features]
default = ["DEBUG"]

DEBUG = []

[dependencies]
#relesk          = {path = "/Users/rjacobson/Development/Lesk/relesk"}
structopt = { version = "0.3.17", features = ["wrap_help", "color", "debug"] }
codespan = "0.9.5"

#lazy_static    = "1.4.0"
#macro-attr     = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#newtype_derive = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#strum          = "0.19"  # String <--> Enum conversions
#strum_macros   = "0.19"
#num_enum       = "0.5.1" # Primitive <--> Enum conversions

#[workspace]
#members = ["relesk"]
