[package]
name = "leskical"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"
description = "A spiritual descendant of lex inspired by RE-flex."


[dependencies]
#structopt = { version = "0.3.17", features = ["wrap_help", "color", "debug"] }
#codespan = "0.9.5"            # Representing source code
#codespan-reporting = "0.9.5"  # Error reporting
#nom = "6.0.0-alpha1"
#nom_locate = "2.0.0"  # Nom input type with location information.
#log = "0.4"
#nix-parser = { version = "0.1.0", path = "./parser" }
lesk = { version = "0.1.0", path = "./lesk" }
nom_locate = "2.0.0"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["lesk"]
