[package]
name = "lesk-specification"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"
description = "A spiritual descendant of lex inspired by RE-flex."

[features]
default = ["DEBUG"]

DEBUG = []

[dependencies]
# command line argument parsing
structopt = { version = "0.3.17", features = ["wrap_help", "color"] }
saucepan = {path = "../saucepan" }            # Error reporting, SourceFiles
codespan-reporting = "0.9.5"  # Error reporting
nom = "5.1.2"
# Nom input type with location information.
nom_locate = "2.0.0"
smallvec = { version = "1.4.2", features = ["union"] }
phf = { version = "0.8.0", features = ["macros"] } # Static HashMap
byte_set = "0.1.3" # Storing `ModeID`s

#lazy_static    = "1.4.0"
#macro-attr     = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#newtype_derive = {git = "https://github.com/DanielKeep/rust-custom-derive.git"}
#strum          = "0.19"  # String <--> Enum conversions
#strum_macros   = "0.19"
#num_enum       = "0.5.1" # Primitive <--> Enum conversions

#[workspace]
#members = ["relesk"]
